--- a/.gitignore
+++ b/.gitignore
@@ -131,5 +131,5 @@ dmypy.json
 # CSV files with dataset
 ASM_PZ2_podaci_2122/**/*.csv
 
-# Large network gml files
-usernet.gml
+# Network gml files
+*.gml
